# etui_system

./: README.md  pyproject.toml
etui_system/: __init__.py  bus_contract.py  plugin.py  poller.py  tab.py
etui_system/widgets/: cpu_bars.py  mem_gauge.py  process_table.py
tests/: test_poller.py  test_tab.py
